# SiVAL

./: .gitignore  CMakeLists.txt  README.md  SiVAL.Doxyfile  bSiVAL.Doxyfile
include/: aadefines.hpp  centerstack.hpp  encloserwidget.hpp  enclosuredocument.hpp  enclosurenewdialog.hpp  enclosurewidget.hpp  headerlabel.hpp  homepanel.hpp  homewidget.hpp  idocument.hpp  ienclosure.hpp  mainwindow.hpp  manufacturerdocument.hpp  projectdocument.hpp  projectmenu.hpp  projectnewdialog.hpp  projectpanel.hpp  projecttreewidget.hpp  sealedenclosure.hpp  settingsdocument.hpp  sival.hpp  sivalwindow.hpp  speakerbrandcard.hpp  speakerdata.hpp  speakerdocument.hpp  speakermanufacturer.hpp  speakermanufacturercard.hpp  speakerparameter.hpp  speakersettingsdocument.hpp  speakersettingspage.hpp  speakersettingswidget.hpp  treeitem.hpp  ventedenclosure.hpp
libsival/: coneexcursion.cpp  coneexcursionsealed.cpp  coneexcursionvented.cpp  frequencyresponse.cpp  frequencyresponsesealed.cpp  frequencyresponsevented.cpp  groupdelay.cpp  groupdelaysealed.cpp  groupdelayvented.cpp  impedance.cpp  impedancephase.cpp  impedancephasesealed.cpp  impedancephasevented.cpp  impedancesealed.cpp  impedancevented.cpp  portairvelocity.cpp  portairvelocitysealed.cpp  portairvelocityvented.cpp  speaker.cpp
resource/: nw.qrc  sival.qrc
sival/: CMakeLists.txt  version.hpp.in
sival-core/: CMakeLists.txt
sival-core/include/sivalcore/: core_global.hpp  sivalglobal.hpp
sival-core/include/sivalcore/abstractions/: abstractdocument.hpp  abstractiohandler.hpp
sival-core/include/sivalcore/documents/: projectdocument.hpp  settingsdocument.hpp  workspacedocument.hpp
sival-core/include/sivalcore/io/: settingsiohandler.hpp  settingsjsonhandler.hpp
sival-core/include/sivalcore/settings/: general.hpp  project.hpp  system.hpp
sival-core/src/abstractions/: abstractdocument.cpp  abstractiohandler.cpp
sival-core/src/documents/: projectdocument.cpp  settingsdocument.cpp  workspacedocument.cpp
sival-core/src/io/: settingsiohandler.cpp  settingsjsonhandler.cpp
sival-core/src/settings/: general.cpp  project.cpp  system.cpp
sival-enclosure/: CMakeLists.txt
sival-enclosure/include/: aadefines.hpp  centerstack.hpp  chartview.hpp  enclosuremenu.hpp  enclosurenewdialog.hpp  enclosurewidget.hpp  headerlabel.hpp  homepanel.hpp  homewidget.hpp  infopage.hpp  projectmenu.hpp  projectnewdialog.hpp  projectpanel.hpp  projecttreewidget.hpp  recentprjpage.hpp  recentprojectcard.hpp  sivalgui.hpp  sivalwindow.hpp  speakerbrandcard.hpp  speakermanufacturercard.hpp  speakersettingsmenu.hpp  speakersettingspage.hpp  speakersettingswidget.hpp  treeitem.hpp
sival-enclosure/resource/: sival.qrc
sival-enclosure/src/: centerstack.cpp  chartview.cpp  enclosuremenu.ui  enclosurenewdialog.cpp  enclosurenewdialog.ui  enclosurewidget.cpp  enclosurewidget.ui  headerlabel.cpp  homepanel.cpp  homepanel.ui  homewidget.cpp  homewidget.ui  infopage.cpp  infopage.ui  main.cpp  projectmenu.cpp  projectmenu.ui  projectnewdialog.cpp  projectnewdialog.ui  projectpanel.cpp  projectpanel.ui  projecttreewidget.cpp  recentprjpage.cpp  recentprjpage.ui  recentprojectcard.cpp  sivalwindow.cpp  speakerbrandcard.cpp  speakermanufacturercard.cpp  speakersettingsmenu.cpp  speakersettingspage.cpp  speakersettingspage.ui  speakersettingswidget.cpp  speakersettingswidget.ui  treeitem.cpp
sival-gui/: CMakeLists.txt
sival-gui/include/sivalgui/: assistant.hpp  button.hpp  card.hpp  cardlist.hpp  counter.hpp  diagramm.hpp  enclosurecard.hpp  frame.hpp  framebar.hpp  framebarbutton.hpp  global.hpp  headerlabel.hpp  label.hpp  line.hpp  mainwindow.hpp  navbarbutton.hpp  navbarpanel.hpp  navigationbar.hpp  navigationbutton.hpp  navigationpanel.hpp  navigationwidget.hpp  overlaydialog.hpp  pushbutton.hpp  section.hpp  sectioncard.hpp  selectionbar.hpp  selectionbutton.hpp  selectiontree.hpp  sivalgui.hpp  skilllabel.hpp  spinwidget.hpp  startitembig.hpp  style.hpp  styleselectionbutton.hpp  titlebar.hpp  toolbutton.hpp  view.hpp
sival-gui/src/: assistant.cpp  button.cpp  card.cpp  cardlist.cpp  counter.cpp  diagramm.cpp  enclosurecard.cpp  frame.cpp  framebar.cpp  framebarbutton.cpp  headerlabel.cpp  label.cpp  line.cpp  mainwindow.cpp  navbarbutton.cpp  navbarpanel.cpp  navigationbar.cpp  navigationbutton.cpp  navigationpanel.cpp  navigationwidget.cpp  overlaydialog.cpp  pushbutton.cpp  section.cpp  sectioncard.cpp  selectionbar.cpp  selectionbutton.cpp  selectiontree.cpp  sivalgui.cpp  skilllabel.cpp  spinwidget.cpp  startitembig.cpp  style.cpp  styleselectionbutton.cpp  titlebar.cpp  toolbutton.cpp  view.cpp
sival-project/: CMakeLists.txt  version.hpp.in
sival-ressource/: CMakeLists.txt  dark_theme.qrc  light_theme.qrc  light_theme.qss  sival-ressource.qrc  sival-settings.qrc  themes.qrc
sival-ressource/cmake/: ThemeBuilder.cmake
sival-ressource/dark/: dark.qss
sival-ressource/i18n/: sival_de_DE.ts  sival_en_EN.ts
sival-ressource/light/: light.qss
sival-ressource/res/: template_theme.qss.in
sival-ressource/res/icons/: arrow-down.svg.in  check.svg.in  close.svg.in  cogwheel.svg.in  copy.svg.in  edit.svg.in  enclosure-fill.svg.in  enclosure.svg.in  export.svg.in  general.svg.in  help.svg.in  home.svg.in  iconize.svg.in  import.svg.in  indeterminate.svg.in  info.svg.in  keyboard.svg.in  max.svg.in  min.svg.in  minus.svg.in  mouse.svg.in  new.svg.in  open.svg.in  plus.svg.in  print.svg.in  projects.svg.in  save.svg.in  save_as.svg.in  sealed.svg.in  speaker.svg.in  trash.svg.in  vented.svg.in
sival-ressource/settings/: default_settings.sival
sival/include/: mainwindow.hpp  projectview.hpp  settingsabout.hpp  settingsgeneral.hpp  settingspanel.hpp  settingsspeaker.hpp  settingsview.hpp  sival.hpp  startitem.hpp  startpanel.hpp  startview.hpp
sival/src/: helpview.cpp  main.cpp  mainwindow.cpp  projectview.cpp  settingsgeneral.cpp  settingspanel.cpp  settingsspeaker.cpp  settingsview.cpp  startitem.cpp  startpanel.cpp  startview.cpp
src/: centerstack.cpp  encloserwidget.cpp  encloserwidget.ui  enclosuredocument.cpp  enclosuremenu.cpp  main.cpp  (+38 more)
(+82 files in other folders)
